--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <title>Online Névjegykártya Magamnak</title>
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+      <link href="main.css" rel="stylesheet">
    </head>
    <body>
      <link rel="preconnect" href="https://fonts.googleapis.com">
