--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Open+Sans&display=swap" rel="stylesheet">
       <div class="profile-card">
       <div class="head">
-         <div class="profile-image"><img src="https://i.imgur.com/EcO1qil.jpg" alt="profilkép"></div>
+         <div class="profile-image"><img src="me.jpg" alt="profilkép"></div>
          <div class="name-headline">
             <h1>Bedzsó Gabriella</h1>
             <h2>Asszisztens</h2>
@@ -33,7 +33,6 @@
              <li><a href="index2.html">English</a></li>
              <li><a href="index3.html">Español</a></i>
            </ul>
-             <li><a href=""
          </section>
         </div>
       </div>
