--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <section class="links">
             <h4>További tartalmakért kattints:</h4>
             <ul>
-               <li><a href="https://www.linkedin.com/in/gabriellabedzso/" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/gabriellabedzso/" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true" style="font-size:24px"></i></a></li>
                <li><a href="https://www.instagram.com/gabriellaa.kovacs/" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a></li>
                <li><a href="https://www.facebook.com/gabriella.bedzso/" title="Facebook" class="social-icon"><i class="fa fa-2x fa-brands fa-facebook-square" aria-hidden="true"></i></a></li>
                
