--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
       <link href="main.css" rel="stylesheet">
    </head>
    <body>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Open+Sans&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet"> 
+     
       <div class="profile-card">
       <div class="head">
          <div class="profile-image"><img src="me.jpg" alt="profilkép"></div>
@@ -25,7 +26,7 @@
          <section class="links">
             <h4>További tartalmakért kattints:</h4>
             <ul>
-               <li><a href="https://www.linkedin.com/in/gabriellabedzso/" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true" style="font-size:24px"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/gabriellabedzso/" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
                <li><a href="https://www.instagram.com/gabriellaa.kovacs/" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a></li>
                <li><a href="https://www.facebook.com/gabriella.bedzso/" title="Facebook" class="social-icon"><i class="fa fa-2x fa-brands fa-facebook-square" aria-hidden="true"></i></a></li>
                
