--- a/index3.html
+++ b/index3.html
@@ -5,9 +5,9 @@
       <link href="main.css" rel="stylesheet">
    </head>
    <body>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Open+Sans&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet"> 
       <div class="profile-card">
       <div class="head">
          <div class="profile-image"><img src="me.jpg" alt="profilkép"></div>
