--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <div class="name-headline">
             <h1>Bedzsó Gabriella</h1>
             <h2>Asszisztens</h2>
-            <h3>helyileg</h3>
+            <h3>lokáció</h3>
             <h3><i class="fa fa-map-marker"></i> Gödöllő, HU</h3>
          </div>
       </div>
@@ -24,16 +24,17 @@
             Asszisztens vagyok egy kis cégnél, amely mérnöki szolgáltatással foglalkozik. Szabadidőmben kódolok és nyelveket tanulok. Eredeti nyelven nézek meg minden filmet, és imádok sütit sütni.
          </p>
          <section class="links">
-            <h4>További tartalmakért kattints:</h4>
+            <h4>Kapcsolat:</h4>
             <ul>
-               <li><a href="https://www.linkedin.com/in/gabriellabedzso/" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-               <li><a href="https://www.instagram.com/gabriellaa.kovacs/" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a></li>
-               <li><a href="https://www.facebook.com/gabriella.bedzso/" title="Facebook" class="social-icon"><i class="fa fa-2x fa-brands fa-facebook-square" aria-hidden="true"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/gabriellabedzso/#" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true">Linkedin</i></a></li>
+               <li><a href="https://www.instagram.com/gabriellaa.kovacs/#" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true">Instagram</i></a></li>
+               <li><a href="https://www.facebook.com/gabriella.bedzso/#" title="Facebook" class="social-icon"><i class="fa fa-2x fa-brands fa-facebook-square" aria-hidden="true">Facebook</i></a></li>
                
            </ul>
              <li><a href="index2.html">English</a></li>
              <li><a href="index3.html">Español</a></i>
            </ul>
+
          </section>
         </div>
       </div>
