--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
    <body>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&family=Dosis:wght@200&family=Mulish:wght@200&display=swap" rel="stylesheet">  
       <div class="profile-card">
       <div class="head">
          <div class="profile-image"><img src="me.jpg" alt="profilkép"></div>
