--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&family=Dosis:wght@200&family=Mulish:wght@200&display=swap" rel="stylesheet"> 
-     
       <div class="profile-card">
       <div class="head">
          <div class="profile-image"><img src="me.jpg" alt="profilkép"></div>
          <div class="name-headline">
-            <h1>Bedzsó Gabriella</h1>
-            <h2>Asszisztens</h2>
-            <h3>lokáció</h3>
+            <h1>Gabriella Bedzsó</h1>
+            <h2>Service assistant</h2>
+            <h3>from</h3>
             <h3><i class="fa fa-map-marker"></i> Gödöllő, HU</h3>
          </div>
       </div>
@@ -24,7 +23,7 @@
             Asszisztens vagyok egy kis cégnél, amely mérnöki szolgáltatással foglalkozik. Szabadidőmben kódolok és nyelveket tanulok. Eredeti nyelven nézek meg minden filmet, és imádok sütit sütni.
          </p>
          <section class="links">
-            <h4>Kapcsolat:</h4>
+            <h4>Contant me via:</h4>
             <ul>
                <li><a href="https://www.linkedin.com/in/gabriellabedzso/#" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true">Linkedin</i></a></li>
                <li><a href="https://www.instagram.com/gabriellaa.kovacs/#" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true">Instagram</i></a></li>
@@ -34,7 +33,7 @@
              <li><a href="index2.html">English</a></li>
              <li><a href="index3.html">Español</a></i>
            </ul>
-
+            
          </section>
         </div>
       </div>
