--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,8 @@
       </div>
       <div class="content">
          <p class="about">
-            I am one of the servic assistant from a family company who provides services for packaging companies. 
-            In my freetime I learn coding and speaking foreign languages. Watching movies and love baking cookies.
+            I am one of the <em>service assistant</em> from a family company who provides services for packaging companies. 
+            In my freetime I learn <em>coding</em> and <em>speaking foreign languages</em>. Watching movies and love baking cookies.
          </p>
          <section class="links">
             <h4>Contant me via:</h4>
