--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
                
            </ul>
              <li><a href="index.html">Magyar</a></li>
-             <li><a href="index2.html">Engish</a></i>
+             <li><a href="index2.html">English</a></i>
            </ul>
          </section>
         </div>
