--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
       <title>Online Névjegykártya Magamnak</title>
       <link href="main.css" rel="stylesheet">
    </head>
@@ -30,6 +32,7 @@
                <li><a href="https://www.facebook.com/gabriella.bedzso/#" title="Facebook" class="social-icon"><i class="fa fa-2x fa-brands fa-facebook-square" aria-hidden="true">Facebook</i></a></li>
                
            </ul>
+           <ul>
              <li><a href="index.html">Magyar</a></li>
              <li><a href="index2.html">English</a></i>
            </ul>
