--- a/index2.html
+++ b/index2.html
@@ -28,9 +28,9 @@
          <section class="links">
             <h4>Contant me via:</h4>
             <ul>
-               <li><a href="https://www.linkedin.com/in/gabriellabedzso/#" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true">Linkedin</i></a></li>
-               <li><a href="https://www.instagram.com/gabriellaa.kovacs/#" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true">Instagram</i></a></li>
-               <li><a href="https://www.facebook.com/gabriella.bedzso/#" title="Facebook" class="social-icon"><i class="fa fa-2x fa-brands fa-facebook-square" aria-hidden="true">Facebook</i></a></li>
+               <li><a href="https://www.linkedin.com/in/gabriellabedzso/#" title="Linkedin" class="social-icon"><i class="fa fa-2x fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+               <li><a href="https://www.instagram.com/gabriellaa.kovacs/#" title="Instagram" class="social-icon"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a></li>
+               <li><a href="https://www.facebook.com/gabriella.bedzso/#" title="Facebook" class="social-icon"><i class="fa fa-2x fa-brands fa-facebook-square" aria-hidden="true"></i></a></li>
                
            </ul>
            <ul>
